alignment fix on social media icons

--- a/css/style.css
+++ b/css/style.css
@@ -332,8 +332,8 @@ a.active {
 
 .social_media_2 ul li {
     float: left;
-    padding-right: 20px;
-    font-size: 18px;
+    padding-right: 10px;
+    font-size: 20px;
 }
 
 
